# sw-cor24-x-tinyc

./: CHANGES.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE  README.md
components/backend/crates/cc24-codegen/: Cargo.toml
components/backend/crates/cc24-codegen/src/: binop.rs  codegen.rs  emit.rs  expr.rs  func.rs  gen_expr.rs  gen_function.rs  gen_stmt.rs  lib.rs  runtime.rs  stmt.rs
components/backend/crates/tc24r-codegen/: Cargo.toml
components/backend/crates/tc24r-codegen-tests/: Cargo.toml
components/backend/crates/tc24r-codegen-tests/fixtures/: add_locals.expected.s  call.expected.s  fib.c  fib.expected.s  globals.expected.s  if_else.expected.s  return_0.expected.s  return_42.expected.s  return_large.expected.s  switch.c  switch.expected.s  while_loop.expected.s
components/backend/crates/tc24r-codegen-tests/src/: codegen_checks.rs  golden.rs  lib.rs
components/backend/crates/tc24r-codegen-validate/: Cargo.toml
components/backend/crates/tc24r-codegen-validate/src/: as24_basic.rs  as24_ops.rs  cor24_basic.rs  cor24_ops.rs  cor24_ptr.rs  lib.rs
components/backend/crates/tc24r-codegen/src/: codegen.rs  gen_expr.rs  gen_function.rs  gen_stmt.rs
components/cli/crates/tc24r/: Cargo.toml
components/cli/crates/tc24r/src/: main.rs
components/codegen-emit/crates/tc24r-emit-core/: Cargo.toml
components/codegen-emit/crates/tc24r-emit-core/src/: emit.rs  immediate.rs  lib.rs
components/codegen-expr/crates/cc24-expr-literal/: Cargo.toml
components/codegen-expr/crates/cc24-expr-literal/src/: literal.rs
components/codegen-expr/crates/cc24-expr-pointer/: Cargo.toml
components/codegen-expr/crates/cc24-expr-pointer/src/: cast.rs  deref.rs
components/codegen-expr/crates/cc24-expr-struct/: Cargo.toml
components/codegen-expr/crates/cc24-expr-struct/src/: lib.rs  member.rs
components/codegen-expr/crates/tc24r-expr-literal/: Cargo.toml
components/codegen-expr/crates/tc24r-expr-literal/src/: lib.rs  literal.rs
components/codegen-expr/crates/tc24r-expr-ops/: Cargo.toml
components/codegen-expr/crates/tc24r-expr-ops/src/: binop.rs  unary.rs
components/codegen-expr/crates/tc24r-expr-pointer/: Cargo.toml
components/codegen-expr/crates/tc24r-expr-pointer/src/: cast.rs  deref.rs  lib.rs
components/codegen-ops/crates/tc24r-ops-incdec/: Cargo.toml
components/codegen-ops/crates/tc24r-ops-incdec/src/: incdec.rs
components/codegen-structure/crates/tc24r-struct-isr/: Cargo.toml
components/codegen-structure/crates/tc24r-struct-isr/src/: isr_epilogue.rs  isr_prologue.rs
components/frontend/: Cargo.toml
components/frontend/crates/cc24-lexer/: Cargo.toml
components/frontend/crates/cc24-lexer-tests/: Cargo.toml
components/frontend/crates/cc24-lexer-tests/src/: lib.rs
components/frontend/crates/cc24-lexer/src/: lib.rs  operators.rs  readers.rs  scanner.rs
components/frontend/crates/cc24-parse-stream/: Cargo.toml
components/frontend/crates/cc24-parse-stream/src/: expect.rs  lib.rs  stream.rs
components/frontend/crates/cc24-parser/: Cargo.toml
components/frontend/crates/cc24-parser-compound/src/: compound.rs
components/frontend/crates/cc24-parser-enum/: Cargo.toml
components/frontend/crates/cc24-parser-enum/src/: enum_parse.rs  lib.rs
components/frontend/crates/cc24-parser-struct/: Cargo.toml
components/frontend/crates/cc24-parser-struct/src/: lib.rs  struct_parse.rs
components/frontend/crates/cc24-parser-tests/: Cargo.toml
components/frontend/crates/cc24-parser-tests/src/: lib.rs  tests_enum.rs
components/frontend/crates/cc24-parser-types/src/: lib.rs  type_detect.rs  type_parse.rs
components/frontend/crates/cc24-parser/src/: arithmetic.rs  bitwise.rs  control.rs  decl.rs  expr.rs  lib.rs  stmt.rs
components/frontend/crates/cc24-preprocess-tests/: Cargo.toml
components/frontend/crates/cc24-preprocess-tests/src/: lib.rs  tests_define.rs  tests_include.rs
components/frontend/crates/cc24-preprocess/src/: include.rs  lib.rs
components/frontend/crates/tc24r-dce/: Cargo.toml
components/frontend/crates/tc24r-dce/src/: lib.rs
components/frontend/crates/tc24r-dce/tests/: dce_tests.rs
components/frontend/crates/tc24r-lexer/: Cargo.toml
components/frontend/crates/tc24r-lexer-tests/: Cargo.toml
components/frontend/crates/tc24r-lexer-tests/src/: lib.rs  tests_basic.rs  tests_extended.rs
components/frontend/crates/tc24r-lexer/src/: lib.rs  operators.rs  readers.rs  scanner.rs
components/frontend/crates/tc24r-parse-stream/: Cargo.toml
components/frontend/crates/tc24r-parse-stream/src/: attrs.rs  expect.rs  lib.rs  stream.rs
components/frontend/crates/tc24r-parser/: Cargo.toml
components/frontend/crates/tc24r-parser-compound/: Cargo.toml
components/frontend/crates/tc24r-parser-compound/src/: compound.rs  lib.rs
components/frontend/crates/tc24r-parser-enum/: Cargo.toml
components/frontend/crates/tc24r-parser-enum/src/: enum_parse.rs  lib.rs
components/frontend/crates/tc24r-parser-struct/: Cargo.toml
components/frontend/crates/tc24r-parser-struct/src/: lib.rs  struct_parse.rs
components/frontend/crates/tc24r-parser-tests/: Cargo.toml
components/frontend/crates/tc24r-parser-tests/src/: lib.rs  tests_array_const_expr.rs  tests_basic.rs  tests_compound_literal.rs  tests_enum.rs  tests_fnptr.rs  tests_globals.rs  tests_postfix.rs  tests_string_concat.rs  tests_types.rs
components/frontend/crates/tc24r-parser-typedef/: Cargo.toml
components/frontend/crates/tc24r-parser-typedef/src/: lib.rs  typedef_parse.rs
components/frontend/crates/tc24r-parser-types/: Cargo.toml
components/frontend/crates/tc24r-parser-types/src/: lib.rs  type_detect.rs  type_parse.rs
components/frontend/crates/tc24r-parser/src/: arithmetic.rs  bitwise.rs  control.rs  decl.rs  expr.rs  lib.rs  stmt.rs
components/frontend/crates/tc24r-preprocess/: Cargo.toml
components/frontend/crates/tc24r-preprocess-tests/: Cargo.toml
components/frontend/crates/tc24r-preprocess-tests/src/: lib.rs  tests_define.rs  tests_include.rs  (+2 more)
components/macros/crates/tc24r-macros-tests/: Cargo.toml
components/testing/crates/tc24r-test-compile/: Cargo.toml
(+816 files in other folders)
