[workspace]
members = [
    "crates/tc24r-lexer",
    "crates/tc24r-lexer-tests",
    "crates/tc24r-parse-stream",
    "crates/tc24r-parser",
    "crates/tc24r-parser-compound",
    "crates/tc24r-parser-enum",
    "crates/tc24r-parser-struct",
    "crates/tc24r-parser-tests",
    "crates/tc24r-parser-typedef",
    "crates/tc24r-parser-types",
    "crates/tc24r-preprocess",
    "crates/tc24r-preprocess-tests",
]
resolver = "3"
