[package]
name = "tc24r-emit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-codegen-state = { path = "../../../codegen-state/crates/tc24r-codegen-state" }
tc24r-emit-macros = { path = "../../../macros/crates/tc24r-emit-macros" }
cor24-isa = { path = "../../../../../../sw-embed/cor24-rs/isa" }
