[package]
name = "cc24-expr-pointer"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-codegen-state = { path = "../../../codegen-state/crates/cc24-codegen-state" }
cc24-ast = { path = "../../../core/crates/cc24-ast" }
cc24-emit-macros = { path = "../../../macros/crates/cc24-emit-macros" }
cc24-type-infer = { path = "../../../codegen-ops/crates/cc24-type-infer" }
