[package]
name = "tc24r-expr-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-codegen-state = { path = "../../../codegen-state/crates/tc24r-codegen-state" }
tc24r-ast = { path = "../../../core/crates/tc24r-ast" }
tc24r-emit-macros = { path = "../../../macros/crates/tc24r-emit-macros" }
tc24r-type-infer = { path = "../../../codegen-ops/crates/tc24r-type-infer" }
tc24r-ops-arithmetic = { path = "../../../codegen-ops/crates/tc24r-ops-arithmetic" }
tc24r-ops-bitwise = { path = "../../../codegen-ops/crates/tc24r-ops-bitwise" }
tc24r-ops-compare = { path = "../../../codegen-ops/crates/tc24r-ops-compare" }
tc24r-ops-divmod = { path = "../../../codegen-ops/crates/tc24r-ops-divmod" }
tc24r-ops-logical = { path = "../../../codegen-ops/crates/tc24r-ops-logical" }
tc24r-ops-unary = { path = "../../../codegen-ops/crates/tc24r-ops-unary" }
tc24r-ops-incdec = { path = "../../../codegen-ops/crates/tc24r-ops-incdec" }
