[package]
name = "tc24r-expr-pointer"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-codegen-state = { path = "../../../codegen-state/crates/tc24r-codegen-state" }
tc24r-ast = { path = "../../../core/crates/tc24r-ast" }
tc24r-emit-macros = { path = "../../../macros/crates/tc24r-emit-macros" }
tc24r-type-infer = { path = "../../../codegen-ops/crates/tc24r-type-infer" }
