[package]
name = "tc24r-ops-incdec"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-codegen-state = { path = "../../../codegen-state/crates/tc24r-codegen-state" }
tc24r-emit-core = { path = "../../../codegen-emit/crates/tc24r-emit-core" }
tc24r-emit-macros = { path = "../../../macros/crates/tc24r-emit-macros" }
tc24r-emit-load-store = { path = "../../../codegen-emit/crates/tc24r-emit-load-store" }
