[package]
name = "tc24r-struct-isr"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-codegen-state = { path = "../../../codegen-state/crates/tc24r-codegen-state" }
tc24r-struct-prologue = { path = "../tc24r-struct-prologue" }
tc24r-emit-macros = { path = "../../../macros/crates/tc24r-emit-macros" }
