[package]
name = "tc24r-parser-types"
version = "0.1.0"
edition = "2024"

[dependencies]
tc24r-ast = { path = "../../../core/crates/tc24r-ast" }
tc24r-error = { path = "../../../core/crates/tc24r-error" }
tc24r-parse-stream = { path = "../tc24r-parse-stream" }
tc24r-parser-struct = { path = "../tc24r-parser-struct" }
tc24r-token = { path = "../../../core/crates/tc24r-token" }
